--- a/css/wine.css
+++ b/css/wine.css
@@ -22,13 +22,17 @@ button.query{
   background-color: orange;
 }
 
-button.cart, button.ok{
+button.ok{
   padding: 3px;
   width: 30px;
 }
 
+button.cart {
+  padding: 0px;
+}
+
 button.cart img {
-  width: 20px;
+  width: 25px;
   padding: 0px;
 }
 
@@ -38,11 +42,6 @@ p.add {
 
 p.query{
   background-color: aquamarine;
-}
-
-div.message {
-  display: flex;
-  justify-content: start;
 }
 
 div.message > button {
